fixed text align

--- a/css/sass/co2ok.scss
+++ b/css/sass/co2ok.scss
@@ -192,6 +192,7 @@
         font-size: 0.9em;
         line-height: normal;
         box-sizing: border-box;
+        text-align: left;
         padding: 5px;
         border-radius: 5px;
         border: 2px solid #28db83;
